--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>
         Hello, word!
     </h1>
+    <h2>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam quisquam mollitia repellendus expedita quod molestias pariatur ipsum ut impedit quo iusto, dolores quos aliquam? Repellat amet quasi explicabo quos corrupti.
+    </h2>
 </body>
 </html>
